# icfpc-2016

./: .gitignore  LICENSE  README.md  icfpc2016.cabal  solvers-run.prof  stack.yaml  submit-solutions
VisulizeToFile/: VisulizeToFile.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/: Main.hs  ScoreSolution.hs  SingleSolver.hs  Solvers.hs  VisualizeProblem.hs  VisualizeSolution.hs  VisualizeTask.hs
errors/: 1.txt
problems/bbrects/: 101.txt  1014.txt  1018.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  1030.txt  1031.txt  107.txt  1083.txt  1091.txt  1110.txt  1115.txt  1127.txt  1129.txt  1130.txt  1133.txt  1139.txt  1140.txt  1157.txt  1234.txt  1239.txt  1247.txt  1361.txt  1367.txt  1368.txt  1369.txt  1378.txt  1406.txt  1433.txt  1453.txt  1465.txt  1467.txt  (+197 more)
problems/bbsquares/: solution.10.txt  solution.100.txt  solution.11.txt  solution.13.txt  solution.14.txt  solution.15.txt  solution.16.txt  solution.17.txt  solution.18.txt  solution.19.txt  solution.2.txt  solution.20.txt  solution.21.txt  solution.22.txt  solution.23.txt  solution.24.txt  solution.25.txt  solution.26.txt  solution.27.txt  solution.28.txt  solution.29.txt  solution.3.txt  solution.30.txt  solution.31.txt  solution.32.txt  solution.33.txt  solution.34.txt  solution.35.txt  solution.36.txt  solution.37.txt  solution.39.txt  solution.41.txt  solution.42.txt  solution.43.txt  solution.44.txt  solution.45.txt  solution.46.txt  solution.47.txt  solution.48.txt  solution.49.txt  (+53 more)
problems/meta-solver/: 10.txt  101.txt  1014.txt  1019.txt  1020.txt  1022.txt  1024.txt  1025.txt  1026.txt  1027.txt  1029.txt  1030.txt  105.txt  1067.txt  1068.txt  107.txt  1073.txt  1074.txt  1077.txt  1079.txt  1082.txt  1083.txt  1090.txt  1094.txt  1095.txt  1096.txt  1097.txt  11.txt  (+2424 more)
qml/: factorial1.qml  factorial2.qml  model1.qml  opengl1.qml  opengl2.qml
src/: 1702.hs  1702_dp.hs  BoundingBox.hs  Common.hs  ContribFedor.hs  ContribSectoid.hs  ContribSwizard.hs  ContribTurtle.hs  Developer.hs  Figures.hs  GGenerator.hs  Math.hs  Parse.hs  Show.hs  SolutionDP.hs  SolverBBRect.hs  SolverBBRotate.hs  SolverBBSimple.hs  SolverMetropolis.hs  SolverMinimalRect.hs  SolverMultiRect.hs  SolverRandomSearch.hs  SolversRun.hs  TrafficLight.hs  Visual.hs  Visualize.hs  find-bugs  slow_traffic.hs  true_decision.hs  true_decision.prof
submits/: 10.json  100.json  1000.json  1001.json  1004.json  1005.json  1006.json  1007.json  1008.json  101.json  101.solution.txt  1014.json  1014.solution.txt  1018.json  1018.solution.txt  1019.json  1020.json  1020.solution.txt  1021.json  1021.solution.txt  1022.json  1022.solution.txt  1023.json  1023.solution.txt  1024.json  1025.json  1025.solution.txt  1026.json  1026.solution.txt  1027.json  1027.solution.txt  1028.json  1028.solution.txt  1029.json  1029.solution.txt  1030.json  1030.solution.txt  1031.json  1031.solution.txt  1044.json  (+5464 more)
tools/: common.inc.php  extract-problem.pl  fetch_problems.php  find-oversize.php  submit.php
(+361 files in other folders)
