name:                icfpc2016
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://bitbucket.org/skobochka/icfpc-2016
license:             BSD3
license-file:        LICENSE
author:              Skobochka Team
maintainer:          skobochka@gnolltech.org
copyright:           2016 Skobochka Team
category:            Web
build-type:          Simple
-- extra-source-files:
Data-dir:            src/qml
Data-files:          *.qml *.png
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Common Parse Math Show Visualize Figures SolversRun SolverBBSimple SolverBBRect SolverBBRotate SolverMetropolis
  build-depends:       base >= 4.7 && < 5
                     , clipper
                     , deepseq >= 1.4.1.1
                     , directory >= 1.2.2.0
                     , random >= 1.1
                     , numbers >= 3000.2.0.1
                     , monad-parallel >= 0.7.2.2
                     , concurrent-extra >= 0.7.0.10
                     , json
  default-language:    Haskell2010

executable score-solution
  hs-source-dirs:      app
  main-is:             ScoreSolution.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , icfpc2016
  default-language:    Haskell2010

executable solvers-run
  hs-source-dirs:      app
  main-is:             Solvers.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , icfpc2016
  default-language:    Haskell2010

executable single-run
  hs-source-dirs:      app
  main-is:             SingleSolver.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , icfpc2016
  default-language:    Haskell2010

executable visualize-problem
  hs-source-dirs:      app
  main-is:             VisualizeProblem.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , icfpc2016
                     , hsqml
                     , text
                     , json
  default-language:    Haskell2010

executable visualize-solution
  hs-source-dirs:      app
  main-is:             VisualizeSolution.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , icfpc2016
                     , hsqml
                     , text
                     , json
  default-language:    Haskell2010

test-suite icfpc2016-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , icfpc2016
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.org/skobochka/icfpc-2016
